--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=OnlineCourseSpringProject
+spring.datasource.url=jdbc:mysql://localhost:3306/onlinecoursedb
+spring.datasource.username=intec
+spring.datasource.password=intec-123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+
