--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=intec-123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
-#server.port=8080
-#debug=true
 spring.main.allow-bean-definition-overriding=true
 
+jwt.secret=${JWT_SECRET}
+jwt.expiration-hours=24
